--- a/app/static/css/bootstrap.css
+++ b/app/static/css/bootstrap.css
@@ -746,8 +746,8 @@ progress {
   width: 100%;
   padding-right: calc(var(--bs-gutter-x) * 0.5);
   padding-left: calc(var(--bs-gutter-x) * 0.5);
-  margin-right: auto;
-  margin-left: auto;
+  /* margin-right: auto;
+  margin-left: auto; */
 }
 
 @media (min-width: 576px) {
@@ -4992,8 +4992,12 @@ textarea.form-control-lg {
   --bs-list-group-border-color: var(--bs-border-color);
   --bs-list-group-border-width: var(--bs-border-width);
   --bs-list-group-border-radius: var(--bs-border-radius);
-  --bs-list-group-item-padding-x: 1rem;
-  --bs-list-group-item-padding-y: 0.5rem;
+  /* 25.04.20 */
+  /* --bs-list-group-item-padding-x: 1rem;
+  --bs-list-group-item-padding-y: 0.5rem; */
+  --bs-list-group-item-padding-x: 1vh;
+  --bs-list-group-item-padding-y: 0.5vh;
+
   --bs-list-group-action-color: var(--bs-secondary-color);
   --bs-list-group-action-hover-color: var(--bs-emphasis-color);
   --bs-list-group-action-hover-bg: var(--bs-tertiary-bg);
