--- a/view/common/footer.html
+++ b/view/common/footer.html
@@ -1,3 +1,5 @@
-{% load static %}
-<div class="footer">
+<div class="footer text-center ">
+    <div style="height: 30%; width: 100%; color: #5b5c5a; font-size: 0.7rem">
+        Contact: saintgray0@gmail.com / 010-6528-2023
+    </div>
 </div>
