--- a/app/static/css/common.css
+++ b/app/static/css/common.css
@@ -1,24 +1,79 @@
-body {
+html, body {
     height: 100vh;
-}
-
-.content {
-    min-height:84vh; /* 100 - header vh + footer vh*/
+    width: 100vw;
 }
 
 .header {
     height:5vh;
-    margin-bottom: 1vh;
-    border-bottom: 2PX SOLID #DAD9D9
+    /* margin-bottom: 0.5vh; */
+    border-bottom: 2PX SOLID #DAD9D9;
+    position: relative;
 }
 
-.header::after {
-    border: 1PX solid #DAD9D9;
+.header #logo {
+    padding-left:1vh;
+    padding-top:1.5vh;
+    width:120px;
+    height:90%;
+    cursor: pointer;
 }
+
+.header .bs_icon {
+    width: 2vh;
+    height: 2vh;
+    /* padding-top: 1.5vh; */
+    margin-left: 1vh;
+    position: relative;
+    top: 1.5vh;
+}
+
+/* .header::after {
+border: 1PX solid #DAD9D9;
+} */
 
 .footer {
     background-color: #DAD9D9;
     position: relative;
     height: 10vh;
+    display: flex;
+    align-items: center;
 }
+
+
+.content-body, .app-menu {
+    min-height:85vh; /* 100 - header vh + footer vh*/
+}
+
+.content-body {
+    min-width: 100vw;
+}
+
+.app-menu {
+    width: 16vw;
+    border-right: 2px solid #DAD9D9;
+    padding-top: 0.3vh;
+}
+
+.content {
+    width: 84vw;
+}
+
+/* on tablet, phone */
+@media (max-width: 576px) {
+    .app-menu {
+        width: 20vw;
+    }
+    
+    .content {
+        width: 80vw;
+    }   
+    
+    body {
+        font-size: 0.5rem;
+    }
+    .header #logo {
+        width:10vh;
+    }
+}
+
 
