--- a/view/view_faq_010/view_faq_010.html
+++ b/view/view_faq_010/view_faq_010.html
@@ -10,17 +10,15 @@
 </head>
 <body>
     {% include "header.html" %}
-    <div class="container content-body">
-        <div class="row">
-            <div class="app-menu col-2">
-                {% include "menu.html" %} 
-            </div>
-            <div class="content col-8">
-                {% include "content_faq_010.html" %} 
-            </div>
+    <div class="content-body">
+        <div class="app-menu">
+            {% include "menu.html" %} 
+        </div>
+        <div class="app-content">
+          {% include "content_faq_010.html" %} 
         </div>
     </div>
     {% include "footer.html" %} 
-</body>
+  </body>
 
 </html>
