[FE] module 사용 / 구조

--- a/app/static/css/common.css
+++ b/app/static/css/common.css
@@ -7,7 +7,12 @@ html, body {
     line-height: 75px !important;
     border-bottom: 2PX SOLID #DAD9D9;
     position: relative;
-
+    background: linear-gradient(
+        90deg,
+        #E3E3E3 0%, 
+        #8B8F8B 50%, 
+        #405269 100%
+    );
 }
 
 .header #logo {
