--- a/view/common/header.html
+++ b/view/common/header.html
@@ -3,8 +3,8 @@
     <a href="/view/main"><img id="logo" src="{% static 'image/logo.png' %}"></a>
     <span class="icon-group">
         <a href="/view/login"><img class="bs_icon" src="{% static 'image/person-circle.svg' %}"></a>
-        <a><img class="bs_icon" src="{% static 'image/gear.svg' %}"></a>
-        <a><img class="bs_icon" src="{% static 'image/power.svg' %}"></a>
+        <a href="/view/login"><img class="bs_icon" src="{% static 'image/gear.svg' %}"></a>
+        <a href="/api/logout"><img class="bs_icon" src="{% static 'image/power.svg' %}"></a>
     </span>
 </div>
 
