--- a/view/view_account_010/view_account_010.html
+++ b/view/view_account_010/view_account_010.html
@@ -4,10 +4,12 @@
 <head>
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">    
+    <link rel="shortcut icon" href="{% static 'image/favicon.ico' %}">
     <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
     <link href="{% static 'css/common.css' %}" rel="stylesheet">
     <script src="{% static 'js/bootstrap.bundle.js' %}"> </script>
     <script src="{% static 'js/axios.js' %}"> </script>
+    <script src="{% static 'config.js' %}" type="text/javascript"> </script>
     <script src="{% static 'view_account_010.js' %}" type="module"> </script>
     <style>
         #login-form {
