--- a/view/view_faq_010/view_faq_010.html
+++ b/view/view_faq_010/view_faq_010.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">    
+    <link rel="shortcut icon" href="{% static 'image/favicon.ico' %}">
     <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
     <link href="{% static 'css/common.css' %}" rel="stylesheet">
     <script src="{% static 'js/bootstrap.bundle.js' %}"> </script>
