--- a/view/view_main_010/view_main_010.html
+++ b/view/view_main_010/view_main_010.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1">    
+    <link rel="shortcut icon" href="{% static 'image/favicon.ico' %}">
     <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
     <link href="{% static 'css/common.css' %}" rel="stylesheet">
     <script src="{% static 'js/bootstrap.bundle.js' %}"> </script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="{% static 'js/chart.js' %}"></script>
 </head>
 <body>
   {% include "header.html" %}
